Fixed spacing on cards and title page

--- a/styles.css
+++ b/styles.css
@@ -298,7 +298,7 @@ body {
     background-color: #EEE7DB;
     border: solid #EEE7DB 10px;
     border-radius: 15px;
-    height: 23vw;
+    height: 25vw;
     margin-top: 1.5vw;
     width: 28vw;
 }
